--- a/src/index.css
+++ b/src/index.css
@@ -9,6 +9,22 @@ body {
 /* styles/globals.css */
 @import url('https://fonts.googleapis.com/css2?family=Comic+Neue:wght@400;700&display=swap');
 
+html, body {
+  overflow-x: hidden;
+}
+
+* {
+  box-sizing: border-box;
+}
+
+.flex-1 {
+  flex: 1 1 0%;
+}
+
+.overflow-hidden {
+  overflow: hidden;
+}
+
 .comic-bg {
   font-family: 'Comic Neue', cursive;
 }
